--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,4 @@ pip-selfcheck.json
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/python,virtualenv,visualstudiocode
+.vscode/launch.json
