--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+.states
+assets/external/
+*.db
+.web
 # Created by https://www.toptal.com/developers/gitignore/api/python,virtualenv,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,virtualenv,visualstudiocode
 
